--- a/25-05-07-LLM Analysis-38k-No Key.ipynb
+++ b/25-05-07-LLM Analysis-38k-No Key.ipynb
@@ -2,29 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "51387400",
    "metadata": {},
    "source": [
-    ""
+    "# How to use LLMs for text analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "9628c114",
    "metadata": {},
    "source": [
-    ""
+    "#### 2023. By Petter Törnberg. ILLC, University of Amsterdam. p.tornberg@uva.nl"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "b8ad8ba6",
    "metadata": {},
-   "source":[]
+   "source": [
+    "This notebook is associated to a how-to guide that gives a simple introduction to using Large Language Models for text analysis in the social sciences. The guide is aimed at students and researchers who are interested in using LLMs for their quantitative or qualitative social scientific text analysis, but who have limited programming experience. \n",
+    "\n",
+    "The notebook offers the code for the example of analyzing the level of populism in a given political text, but can easily be adapted for your particular text analysis project."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "",
+   "id": "c3084ea7",
    "metadata": {},
    "source": [
     "## 1. Signing up for API access"
@@ -35,9 +39,9 @@
    "id": "8dfa0750",
    "metadata": {},
    "source": [
+    "The first step is to sign up to API access with OpenAI. This can be done on platform.openai.com. (See the PDF how-to guide for further instructions.)\n",
     "\n",
-    "\n",
-    ""
+    "You will receive an API key to be used below."
    ]
   },
   {
@@ -53,7 +57,7 @@
    "id": "3351fd23",
    "metadata": {},
    "source": [
-    ""
+    "We first need to install and import the relevant libraries: the pandas package for general data processing, and the openai package for interacting with the OpenAI API."
    ]
   },
   {
